--- a/PiczaNB/app/build.gradle
+++ b/PiczaNB/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.p1.picza"
+        applicationId "com.p1.picza_pdm"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
